# RadX

./: "GLSLANG.spv"  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  cmake-build-debug  readme.md
CUDA/: vs2017.sln
CUDA/RadX-CUDA/: RadX-CUDA.vcxproj  kernel.cu
CUDA/thrust-sort/: thrust-sort.vcxproj
include/: renderdoc.h
include/radx/: radx.hpp  radx_buffer.hpp  radx_core.hpp  radx_device.hpp  radx_implement.inl  radx_internal.hpp  radx_shaders.hpp  radx_utils.hpp
include/red21/: botanic.h
include/vku/: headless.hpp  vku.hpp
include/vma/: vk_mem_alloc.h
include/volk/: volk.c  volk.h
include/vulkan/: vulkan.hpp  vulkan_core.h
prebuilt/intrusive/amd/radix/: copyhack.comp.spv  counting.comp.spv  histogram.comp.spv  indiction.comp.spv  partition.comp.spv  permute.comp.spv  pfx-work.comp.spv  scattering.comp.spv  transposer.comp.spv
prebuilt/intrusive/amdg/radix/: partition.comp.spv  permutation.comp.spv
prebuilt/intrusive/amdgpu/radix/: counting.comp.spv  scattering.comp.spv
prebuilt/intrusive/intel/radix/: copyhack.comp.spv  counting.comp.spv  histogram.comp.spv  partition.comp.spv  permutation.comp.spv  permute.comp.spv  pfx-work.comp.spv  scattering.comp.spv  transposer.comp.spv
prebuilt/intrusive/nvidia/radix/: copyhack.comp.spv  counting.comp.spv  histogram.comp.spv  partition.comp.spv  permute.comp.spv  pfx-work.comp.spv  scattering.comp.spv  transposer.comp.spv
prebuilt/intrusive/radv/radix/: copyhack.comp.spv  counting.comp.spv  histogram.comp.spv  partition.comp.spv  permute.comp.spv  pfx-work.comp.spv  scattering.comp.spv  transposer.comp.spv
prebuilt/intrusive/turing/: scattering.comp.spv
prebuilt/intrusive/turing/radix/: copyhack.comp.spv  counting.comp.spv  histogram.comp.spv  indiction.comp.spv  partition.comp.spv  permutation.comp.spv  permute.comp.spv  pfx-work.comp.spv  scattering.comp.spv  transposer.comp.spv
prebuilt/intrusive/universal/radix/: copyhack.comp.spv  counting.comp.spv  histogram.comp.spv  partition.comp.spv  permute.comp.spv  pfx-work.comp.spv  scattering.comp.spv  transposer.comp.spv
prebuilt/intrusive/vega/radix/: copyhack.comp.spv  counting.comp.spv  histogram.comp.spv  indiction.comp.spv  partition.comp.spv  permutation.comp.spv  permute.comp.spv  pfx-work.comp.spv  scattering.comp.spv  transposer.comp.spv
prebuilt/intrusive/vega10/radix/: counting.comp.spv  partition.comp.spv  scattering.comp.spv
shaders-sdk/: \"GLSLANG.spv\"  build-for-amd.ps1  build-for-intel8.ps1  build-for-nvidia.ps1  build-for-radv.ps1  build-for-turing.ps1  build-for-universal.ps1  build-for-vega.ps1  readme.md  shaders-list.ps1
shaders-sdk/RadX2-SM7/: readme.md
shaders-sdk/RadX2-SM7-DEV/: counting.comp  includes.glsl  partition.comp  readme.md  scattering.comp
shaders-sdk/include/: ballotlib.glsl  driver.glsl  mathlib.glsl
shaders-sdk/radix/: copyhack.comp  counting.comp  histogram.comp  includes.glsl  indiction.comp  partition.comp  permutation.comp  permute.comp  pfx-work.comp  readme.md  scattering.comp  transposer.comp
shaders-sdk/radix-optimized/: counting.comp  includes.glsl  partition.comp  readme.md  scattering.comp
shaders-sdk/radix-rapid/: counting.comp  includes.glsl  partition.comp  readme.md  scattering.comp
shaders-sdk/radix-rtx/: copyhack.comp  histogram.comp  includes.glsl  permute.comp  pfx-work.comp  plans.txt
shaders-sdk/radix-rtx-edition/: counting.comp  includes.glsl  scattering.comp
src/test/: main.cpp  sort-thrust.cpp  sort-thrust.cu  sort.cpp  sort.cu  sort.hpp
thrust/: vs2017.sln
thrust/RadX-CUDA/: RadX-CUDA.vcxproj  kernel.cu
thrust/thrust-sort/: sort.cu  thrust-sort.vcxproj
thrust/thrust-sort/x64/Debug/: sort.cu.cache  sort.cu1256056492.deps
thrust/thrust-sort/x64/Debug/thrust-sort.tlog/: link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  thrust-sort.lastbuildstate  thrust-sort.write.1u.tlog
thrust/thrust-sort/x64/Release/: sort.cu.cache  sort.cu1256056492.deps
thrust/thrust-sort/x64/Release/thrust-sort.tlog/: link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  thrust-sort.lastbuildstate  thrust-sort.write.1u.tlog
